--- a/novel.bib
+++ b/novel.bib
@@ -556,3 +556,10 @@ url = {https://doi.org/10.1007/BF01589116},
 volume = {45},
 year = {1989}
 }
+
+@book{Por02,
+  title={Foundations of stochastic inventory theory},
+  author={Porteus, Evan L},
+  year={2002},
+  publisher={Stanford University Press}
+}
