--- a/main_file.tex
+++ b/main_file.tex
@@ -33,7 +33,7 @@ Lancaster University, Lancaster LA1 4YX, UK.
 Email: {\tt \{c.liu19,a.n.letchford,i.svetunkov\}@lancaster.ac.uk}}
 \and Adam N.\ Letchford$^*$ \and Ivan Svetunkov$^*$} % end author list
 
-\date{Draft, 23rd July 2020}
+\date{Draft, 25th July 2020}
 
 \begin{document}
 
@@ -112,7 +112,7 @@ For the purpose of what follows, we now explain one variant, the `Nonlinear News
 \]
 where $V$, $P$, $C_h$ and $C_s$ are now \emph{functions} rather than constants.
 
-If $\pi(Q,y)$ has a particularly simple form (e.g., if it is piecewise-linear), then it may be possible to  use calculus to express the optimal order quantity as a quantile. In general, however, a closed-form expression as a quantile is unlikely to exist.
+If $\pi(Q,y)$ has a particularly simple form (e.g., if it is piecewise-linear as in classical NVP), then it may be possible to  use calculus to express the optimal order quantity as a quantile \cite{Ch12}. In general, however, a closed-form expression as a quantile is unlikely to exist \cite{HOS12,Por02}.
 
 We now review one particular example of NNVP, taken from \cite{KK18,PD99,RK02}, that we are going to use in our numerical experiments. The purchase cost $v$ and selling price $p$ are fixed, but $C_h$ and $C_s$ are functions. Overstock items incur a constant unit penalty $\alpha > 0$, but they can be sold in a salvage market with fixed unit sales price $\beta$, with $0<\beta<v$. The demand in the salvage market is itself a random variable, with known distribution, which we denote by $u$. That is, we have:
 \[
@@ -137,7 +137,7 @@ has proven to perform well, and the basic idea is as follows \cite{BT06,Br16,CS1
 
 The biggest advantage of quantile regression is that this method doesn't require the assumption of a specific demand distribution \cite{Hu19}. However, it is efficient only on large samples \cite{Hu19,RV19}. Another drawback is that the performance of this approach depends crucially on the underlying target service level. Huber \cite{Hu19} and Rudin \cite{RV19} demonstrated that the benefit of using the quantile regression method is limited to target service levels smaller than 0.8. If the target service level is higher, then much more data is needed in order to correctly estimate specific quantile.
 
-While quantile regression can be used efficiently for the classical NVP given enough historical data, it fails in case of non-linear NVP. This is because the specific demand quantiles do not necessarily propagate correctly to the correct orders.
+While quantile regression can be used efficiently for the classical NVP given enough historical data, it fails in case of non-linear NVP when there doesn't exist a closed-form solution. This is because the specific demand quantiles do not necessarily propagate correctly to the correct orders.
 
 \subsection{Other integrated approaches} %\label{sub:lit4}
 
@@ -234,13 +234,13 @@ In order to assess the performance of the method and to understand its strengths
 \subsection{When the true model is known}
 \subsubsection{Linear case} \label{sub:exp1}
 
-In our first experiment, we consider the classical NVP with quarterly demand data, and we assume that the DGP for demand is known. In our experiment, we assume that the DGP is a seasonal ARIMA$(1,0,0)(1,0,0)_4$ process with $\theta=0.3$, $\Theta=0.5$, and constant level $500$. We also assume that the error term of the DGP follows a normal distribution $\mathcal{N}(0,200^2)$.
+In our first experiment, we consider the classical NVP with quarterly demand data, and we assume that the DGP for demand is known. In our experiment, we assume that the DGP is a seasonal ARIMA$(1,0,0)(1,0,0)_4$ process with $\theta=0.3$, $\Theta=0.5$, and constant level $500$. We also assume that the error term of the DGP follows a normal distribution $\mathcal{N}(0,200^2)$. We choose deliberately to use ARIMA process in DGP instead of linear regression model itself so as to examine the robustness of our proposed model. Readers can also perform other DGPs in experiment.
 
 Initially, we choose the following parameters for our (linear) profit function:
 \begin{itemize}
     \item $p=20$, $v=10$, $c_h=-3$, $c_s=-7$.
 \end{itemize}
-One can check that the corresponding pair $\big( c_u,c_o \big)$ is $(3,7)$, and the target service level evaluates to $0.3$. (We explore the effect of varying the parameters below.)
+One can check that the corresponding pair $\big( c_u,c_o \big)$ is $(3,7)$, and the target service level evaluates to $0.3$. (We also explore other target service levels below.)
 
 We begin by simulating 20,000 sets of demand data, each consisting of 4800 time periods. From each set, we extract sequences of length 40, 120, 480 and 1200. These will be used to explore how the amount of data available affects the performance of each method.
 
@@ -279,7 +279,6 @@ We see that all four methods converge to the desired target of 0.3 as the sample
 
 Figure \ref{fig:fr0.3} represents the average FR. As one might expect, the average fill rate gets better as sample size grows in all methods. 
 
-The detailed results on performance of methods in terms of the used measures are for the target service level of 0.3 can be found in Table \ref{tab:size_effect0.3}.
 
 \begin{figure}[ht]
 \centering
@@ -287,25 +286,6 @@ The detailed results on performance of methods in terms of the used measures are
 \includegraphics{linear-norm-plot_files/figure-latex/fr-3.pdf}
 \label{fig:fr0.3}
 \end{figure}
-
-\begin{table}[ht]
-\caption{Size effect at 0.3 target service level for classical NVP with known model}
-\label{tab:size_effect0.3}
-\centering \resizebox{\linewidth}{!}{
-\begin{tabular}[t]{ccccccccccccc}
-\toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} & \multicolumn{4}{c}{\textbf{Fill rate}} \\
-\cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9} \cmidrule(l{3pt}r{3pt}){10-13}
-Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
-\midrule
-40 & 5.1\% & 5.6\% & 6.1\% & 5.9\% & 0.25 & 0.24 & 0.33 & 0.33 & 89.5\% & 88.0\% & 90.0\% & 90.8\%\\
-120 & 5.1\% & 5.4\% & 5.5\% & 5.5\% & 0.28 & 0.28 & 0.31 & 0.31 & 90.6\% & 89.7\% & 90.7\% & 91.0\%\\
-480 & 5.1\% & 5.3\% & 5.2\% & 5.3\% & 0.29 & 0.29 & 0.30 & 0.30 & 90.9\% & 90.5\% & 90.9\% & 91.0\%\\
-1200 & 5.1\% & 5.2\% & 5.2\% & 5.2\% & 0.30 & 0.29 & 0.30 & 0.30 & 91.1\% & 90.7\% & 91.0\% & 91.1\%\\
-4800 & 5.2\% & 5.2\% & 5.2\% & 5.3\% & 0.30 & 0.30 & 0.30 & 0.30 & 91.0\% & 90.9\% & 90.9\% & 91.0\%\\
-\bottomrule
-\end{tabular}} 
-\end{table}
 
 Next, we explore whether the target service level has a significant effect on the performance of the methods. Specifically, we considered the following two alternative parameter settings:
 \begin{itemize}
