--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -431,13 +431,22 @@ qr_s<-c(Reduce("+",re_40_p_l[[3]])[3]/iter,Reduce("+",re_40_p_l[[7]])[3]/iter
          ,Reduce("+",re_40_p_l[[11]])[3]/iter)
 cf_s<-c(Reduce("+",re_40_p_l[[4]])[3]/iter,Reduce("+",re_40_p_l[[8]])[3]/iter
          ,Reduce("+",re_40_p_l[[12]])[3]/iter)
+dgp_f<-c(Reduce("+",re_40_p_l[[1]])[4]/iter,Reduce("+",re_40_p_l[[5]])[4]/iter
+         ,Reduce("+",re_40_p_l[[9]])[4]/iter)
+dj_f<-c(Reduce("+",re_40_p_l[[2]])[4]/iter,Reduce("+",re_40_p_l[[6]])[4]/iter
+         ,Reduce("+",re_40_p_l[[10]])[4]/iter)
+qr_f<-c(Reduce("+",re_40_p_l[[3]])[4]/iter,Reduce("+",re_40_p_l[[7]])[4]/iter
+         ,Reduce("+",re_40_p_l[[11]])[4]/iter)
+cf_f<-c(Reduce("+",re_40_p_l[[4]])[4]/iter,Reduce("+",re_40_p_l[[8]])[4]/iter
+         ,Reduce("+",re_40_p_l[[12]])[4]/iter)
 df<-data.frame(c('0.5','0.63','0.3'),percent(dgp_p,accuracy = 0.1),percent(dj_p,accuracy = 0.1)
                ,percent(qr_p,accuracy = 0.1),percent(cf_p,accuracy = 0.1)
-               ,round(dgp_s,2),round(dj_s,2),round(qr_s,2),round(cf_s,2))
-
-colnames(df)<-c('Target service level','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
-kable(df,'latex', booktabs = T,caption = 'Target service level effect (n=40)',align = 'c') %>% 
-        add_header_above(c(" ", "Percentage profit loss" = 4, "Service level" = 4),bold = T) %>%
+               ,round(dgp_s,2),round(dj_s,2),round(qr_s,2),round(cf_s,2)
+               ,percent(dgp_f,accuracy = 0.1),percent(dj_f,accuracy = 0.1)
+               ,percent(qr_f,accuracy = 0.1),percent(cf_f,accuracy = 0.1))
+colnames(df)<-c('Target service level','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
+kable(df,'latex', booktabs = T,align = 'c') %>% 
+        add_header_above(c(" ", "Percentage profit loss" = 4, "Service level" = 4, "Fill rate" = 4),bold = T) %>%
         kable_styling(latex_options = c("striped", "scale_down"))
 ```
 
@@ -487,12 +496,21 @@ qr_s<-c(Reduce("+",re_4800_p_l[[3]])[3]/iter,Reduce("+",re_4800_p_l[[7]])[3]/ite
          ,Reduce("+",re_4800_p_l[[11]])[3]/iter)
 cf_s<-c(Reduce("+",re_4800_p_l[[4]])[3]/iter,Reduce("+",re_4800_p_l[[8]])[3]/iter
          ,Reduce("+",re_4800_p_l[[12]])[3]/iter)
+dgp_f<-c(Reduce("+",re_4800_p_l[[1]])[4]/iter,Reduce("+",re_4800_p_l[[5]])[4]/iter
+         ,Reduce("+",re_4800_p_l[[9]])[4]/iter)
+dj_f<-c(Reduce("+",re_4800_p_l[[2]])[4]/iter,Reduce("+",re_4800_p_l[[6]])[4]/iter
+         ,Reduce("+",re_4800_p_l[[10]])[4]/iter)
+qr_f<-c(Reduce("+",re_4800_p_l[[3]])[4]/iter,Reduce("+",re_4800_p_l[[7]])[4]/iter
+         ,Reduce("+",re_4800_p_l[[11]])[4]/iter)
+cf_f<-c(Reduce("+",re_4800_p_l[[4]])[4]/iter,Reduce("+",re_4800_p_l[[8]])[4]/iter
+         ,Reduce("+",re_4800_p_l[[12]])[4]/iter)
 df<-data.frame(c('0.5','0.63','0.3'),percent(dgp_p,accuracy = 0.1),percent(dj_p,accuracy = 0.1)
                ,percent(qr_p,accuracy = 0.1),percent(cf_p,accuracy = 0.1)
-               ,round(dgp_s,2),round(dj_s,2),round(qr_s,2),round(cf_s,2))
-
-colnames(df)<-c('Target service level','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
-kable(df,'latex', booktabs = T,caption = 'Target service level effect (n=4800)',align = 'c') %>% 
-        add_header_above(c(" ", "Percentage profit loss" = 4, "Service level" = 4),bold = T) %>%
+               ,round(dgp_s,2),round(dj_s,2),round(qr_s,2),round(cf_s,2)
+               ,percent(dgp_f,accuracy = 0.1),percent(dj_f,accuracy = 0.1)
+               ,percent(qr_f,accuracy = 0.1),percent(cf_f,accuracy = 0.1))
+colnames(df)<-c('Target service level','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
+kable(df,'latex', booktabs = T,align = 'c') %>% 
+        add_header_above(c(" ", "Percentage profit loss" = 4, "Service level" = 4, "Fill rate" = 4),bold = T) %>%
         kable_styling(latex_options = c("striped", "scale_down"))
 ```
