--- a/main_file.tex
+++ b/main_file.tex
@@ -302,15 +302,15 @@ and $s=4800$, respectively. Generally speaking, the picture is similar, regardle
 \label{tab:level_effect40}
 \centering
 \resizebox{\linewidth}{!}{
-\begin{tabular}[t]{ccccccccc}
+\begin{tabular}{ccccccccccccc}
 \toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} \\
-\cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
-Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} & \multicolumn{4}{c}{\textbf{Fill rate}} \\
+\cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9} \cmidrule(l{3pt}r{3pt}){10-13}
+Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-0.5 & 2.4\% & 2.7\% & 2.7\% & 2.7\% & 0.50 & 0.39 & 0.50 & 0.50\\
-0.63 & 7.1\% & 7.6\% & 7.8\% & 7.5\% & 0.74 & 0.56 & 0.59 & 0.60\\
-0.3 & 2.7\% & 3.0\% & 2.9\% & 2.8\% & 0.15 & 0.18 & 0.33 & 0.34\\
+\rowcolor{gray!6}  0.5 & 5.0\% & 5.4\% & 5.4\% & 5.3\% & 0.50 & 0.44 & 0.50 & 0.50 & 95.2\% & 93.5\% & 94.7\% & 94.8\%\\
+0.63 & 14.1\% & 15.2\% & 15.0\% & 14.8\% & 0.67 & 0.58 & 0.63 & 0.62 & 97.5\% & 95.8\% & 96.6\% & 96.6\%\\
+\rowcolor{gray!6}  0.3 & 5.0\% & 5.6\% & 5.6\% & 5.5\% & 0.25 & 0.25 & 0.31 & 0.31 & 89.7\% & 88.2\% & 90.6\% & 90.8\%\\
 \bottomrule
 \end{tabular}}
 \end{table}
@@ -320,15 +320,15 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \label{tab:level_effect4800}
 \centering
 \resizebox{\linewidth}{!}{
-\begin{tabular}[t]{ccccccccc}
+\begin{tabular}{ccccccccccccc}
 \toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} \\
-\cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
-Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} & \multicolumn{4}{c}{\textbf{Fill rate}} \\
+\cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9} \cmidrule(l{3pt}r{3pt}){10-13}
+Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-0.5 & 2.4\% & 2.4\% & 2.4\% & 2.4\% & 0.51 & 0.50 & 0.51 & 0.51\\
-0.63 & 6.7\% & 6.7\% & 6.8\% & 6.8\% & 0.64 & 0.64 & 0.64 & 0.64\\
-0.3 & 2.5\% & 2.5\% & 2.5\% & 2.5\% & 0.30 & 0.30 & 0.30 & 0.30\\
+\rowcolor{gray!6}  0.5 & 5.0\% & 5.0\% & 5.0\% & 5.0\% & 0.50 & 0.50 & 0.50 & 0.50 & 95.2\% & 95.2\% & 95.2\% & 95.2\%\\
+0.63 & 14.0\% & 14.0\% & 14.1\% & 14.1\% & 0.63 & 0.63 & 0.63 & 0.63 & 97.0\% & 96.9\% & 96.9\% & 96.9\%\\
+\rowcolor{gray!6}  0.3 & 5.1\% & 5.1\% & 5.2\% & 5.2\% & 0.30 & 0.30 & 0.30 & 0.30 & 91.0\% & 90.9\% & 90.9\% & 91.0\%\\
 \bottomrule
 \end{tabular}}
 \end{table}
