--- a/novel.bib
+++ b/novel.bib
@@ -563,3 +563,13 @@ year = {1989}
   year={2002},
   publisher={Stanford University Press}
 }
+
+@article{Por90,
+  title={Stochastic inventory theory},
+  author={Porteus, Evan L},
+  journal={Handbooks in operations research and management science},
+  volume={2},
+  pages={605--652},
+  year={1990},
+  publisher={Elsevier}
+}
