--- a/main_file.tex
+++ b/main_file.tex
@@ -51,7 +51,7 @@ Newsvendor problems form a classical and important family of stochastic optimisa
 
 Inventory control is a classical and important topic in Operations Research and Operations Management (see, e.g., the books \cite{Po02,SPP98,Zi00}). In this paper, we focus on \emph{Newsvendor Problem} (NVP), which refers to a \emph{single-period} \emph{stochastic} inventory control problem.
 
-In early works on NVP \cite{AHM51,MK51}, it is assumed that the demand in each time period comes from a known probability distribution. Of course, in practice, this is not the case --- a fact already noted in 1958 by Scarf \cite{Sc58}. Assuming that historical demand data is available, one can attempt to address this issue by decomposing the problem into an estimation / forecasting and an optimisation phases.
+In early works on NVP \cite{AHM51,MK51}, it is assumed that the demand in each time period comes from a known probability distribution. Of course, in practice, this is not the case --- a fact already noted in 1958 by Scarf \cite{Sc58}. Assuming that historical demand data is available, one can attempt to address this issue by decomposing the problem into an estimation / forecasting phase and an optimisation phase.
 In the first phase, one makes some assumptions (e.g., normality) regarding the underlying data generating process, and uses the past data to estimate the parameters of the model.
 In the second phase, one determines the order quantity (or quantities) based on the estimated parameter values.
 
@@ -63,9 +63,9 @@ Throughout this paper, we will call this two-phase approach the \emph{disjoint} 
 
 An alternative to the disjoint approach is to use a single, \textit{integrated} approach, in which the order quantities are determined directly from the data. A simple example of an integrated approach is \emph{quantile regression} \cite{Br16,Hu19}, which does not make assumptions about the demand distribution. Unfortunately, it can only be applied to relatively simple NVPs, for which one can express the optimal order quantities in terms of quantiles of demand.
 
-In this paper, we introduce a new integrated approach. It is very flexible, and can be applied to a wide variety of NVPs, with complex profit functions. Roughly speaking, it involves forecasting the optimal order quantities instead of the demand, which is done via the maximisation of the expected profit instead of estimating parameters via the minimisation of a function of forecast errors.
+In this paper, we introduce a new integrated approach. It is very flexible, and can be applied to a wide variety of NVPs, with complex profit functions. Roughly speaking, it involves forecasting the optimal order quantities instead of the demand, which is done via the maximisation of the expected profit, instead of estimating parameters via the minimisation of a function of forecast errors.
 
-We demonstrate in this paper that the proposed approach reduces to quantile regression in the case of the simplest NVP. We then perform extensive computational experiments, on several different NVPs, the results of which show that our method performs at least as good as the disjoint approach, according to several different measures of quality.
+We demonstrate in this paper that the proposed approach reduces to quantile regression in the case of the simplest NVP. We then perform extensive computational experiments, on several different NVPs, the results of which show that our method performs at least as well as the disjoint approach, according to several different measures of quality.
 
 The rest of the paper is organised as follows. Section \ref{se:lit} provides a brief review of the relevant literature. Section \ref{se:new} presents the new method and shows that it is a generalisation of quantile regression. In Section \ref{se:results}, we present and discuss the computational results. Finally, Section \ref{se:end} gives some insights, remarks and suggestions.
 
@@ -229,12 +229,12 @@ normality \cite{KHM05}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Computational Experiments} \label{se:results}
 
-In order to assess the performance of the method and to understand its strengths and weakness, we conduct a simulation experiment. We start with subsection \ref{sub:exp1}, where the simplest case is considered, in which the profit function is linear and the underlying data generation process (DGP) is known. We evaluate how the model estimation influences the order quantity in terms of the selected error measures. Next, in subsection \ref{sub:exp2} we discuss the case in which the profit function is nonlinear. Finally, we consider the case, when the model is misspecified in subsection \ref{sub:exp3}.
+In order to assess the performance of the method and to understand its strengths and weakness, we conduct a simulation experiment. Subsection \ref{sub:exp1} is concerned with the simplest case, in which the profit function is linear and the underlying data generation process (DGP) is known. Subsection \ref{sub:exp2} concerns the case in which the profit function is nonlinear. Finally, Subsection \ref{sub:exp3} repeats the analysis for the ``misspecified" case, in which the model of the DGP is incorrect.
 
-\subsection{When the true model is known}
-\subsubsection{Linear case} \label{sub:exp1}
+\subsection{Linear case} \label{sub:exp1}
 
-In our first experiment, we consider the classical NVP with quarterly demand data, and we assume that the DGP for demand is known. In our experiment, we assume that the DGP is a seasonal ARIMA$(1,0,0)(1,0,0)_4$ process with $\theta=0.3$, $\Theta=0.5$, and constant level $500$. We also assume that the error term of the DGP follows a normal distribution $\mathcal{N}(0,200^2)$. We choose deliberately to use ARIMA process in DGP instead of linear regression model itself so as to examine the robustness of our proposed model. Readers can also perform other DGPs in experiment.
+In our first experiment, we consider the classical NVP with quarterly demand data, and we assume that the DGP for demand is known. In our experiment, we assume that the DGP is a seasonal ARIMA$(1,0,0)(1,0,0)_4$ process with $\theta=0.3$, $\Theta=0.5$, and constant level $500$. We also assume that the error term of the DGP follows a normal distribution $\mathcal{N}(0,200^2)$.
+(The reason that we present results with a seasonal ARIMA model, instead of a simple linear regression model, is to illustrate the robustness of our proposed method. We experimented with other models for the DGP, and the results were very similar.)
 
 Initially, we choose the following parameters for our (linear) profit function:
 \begin{itemize}
@@ -333,7 +333,7 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \end{tabular}}
 \end{table}
 
-\subsubsection{Nonlinear profit functions} \label{sub:exp2}
+\subsection{Nonlinear profit functions} \label{sub:exp2}
 
 In this subsection, we examine the relative performance of the methods when applied to the NNV. As before, we assume that the DGP for the demands is an ARIMA $(1,0,0)(1,0,0)_4$ process, and the error term follows a normal distribution. We use the following nonlinear profit function \cite{KK18}:
 \[
@@ -371,14 +371,17 @@ Another thing to note is that with the increase of the sample size, the methods 
 We would like to stress that the proposed method does not need any complicated numerical optimisation or simulation methods to estimate the optimal order quantity. In addition, we have found that, for these instances, it typically required less computing time than the disjoint method. For example, only $\nicefrac{1}{10}$ amount of computing time is needed by using our proposed method comparing with DJ when $s=40$.
  
 \subsection{The effect of misspecification} \label{sub:exp3}
+
+Next, we examine the effect of
+\emph{model misspecification} on the relative performance of the various methods. We cover both linear and nonlinear cases.
+
 \subsubsection{Linear case}
 
-We now return to the linear case, and examine the effect of
-\emph{model misspecification} on the performance of the disjoint method,
-DJ, and our proposed method, PM, under the effect of misspecification. As we have shown the QR and PM are equivalent in linear NVP, we don't include QR here.
+Recall that, in the linear case, QR and PM are equivalent. For that reason, we don't include QR here.
 
-We first consider the situation in which our applied model is too simple.
-In more detail, the data is still generated from a seasonal ARIMA $(1,0,0)(1,0,0)_4$ model, but we ignore seasonality when solving the NVP. In other words, when estimating the optimal order quantity, we use the incorrect assumption that the DGP is merely an AR$(1)$ process. %As in Subsection \ref{sub:exp1}, we assume that the error term of the demand follows a normal distribution, and we use the linear profit function with target service level $=0.3$.
+We first consider the situation in which our applied model is \emph{too simple} (i.e., under-paramaterised).
+In more detail, the data is still generated from a seasonal ARIMA $(1,0,0)(1,0,0)_4$ model, but we ignore seasonality when solving the NVP. In other words, when estimating the optimal order quantity, we use the incorrect assumption that the DGP is merely an AR$(1)$ process.
+
 \begin{figure}
 \centering
 \caption{Percentage profit loss vs. data size in misleading model}
@@ -396,8 +399,8 @@ In more detail, the data is still generated from a seasonal ARIMA $(1,0,0)(1,0,0
 \label{fig:mis}
 \end{figure}
 
-The percentage profit losses for this case can be seen in Figure
-\ref{fig:mis} (a). By comparing with Figure \ref{fig:ppl0.3}, we see that the use of an incorrect model causes both DJ and PM to incur a small additional losses in profit irrespective of the sample size. These losses do not significantly improve as the number of data points increases, presumably because seasonality plays a key role when making one-step ahead forecasts. Interestingly, the performance of DJ and PM is similar, even though they are very different approaches. This could because the assumptions about the distribution of error term are correct.
+The PPLs for this case can be seen in Figure
+\ref{fig:mis} (a). By comparing with Figure \ref{fig:ppl0.3}, we see that the use of an incorrect model causes both DJ and PM to incur small additional losses in profit, irrespective of the sample size. These losses do not significantly improve as the number of data points increases, presumably because seasonality plays a key role when making one-step ahead forecasts. Interestingly, the performance of DJ and PM is similar, even though they are very different approaches. This could be because the assumptions about the distribution of error term are correct.
 
 \begin{figure}
 \centering
@@ -416,11 +419,11 @@ The percentage profit losses for this case can be seen in Figure
 \label{fig:mis_sl}
 \end{figure}
 
-We also consider the situation where the applied model is overparameterised, ARIMA$(2,0,0)(1,0,0)_4$. The PPL for this case can be seen in Figure \ref{fig:mis} (b). Both DJ and PM incur a loss in profit, as before. Now, however, the loss decreases with the increase of the sample size. Indeed, closer inspection of the regression output revealed that, in both DJ and PM, the estimated value of the redundant model parameter tended to zero as the sample size increased. This can be explained by the well-known statistical phenomenon of redundant variables: they lead to less efficient estimates of parameters but do not incur the bias in the estimates as the effect of omitted variables typically does.
+We also consider the situation where the applied model is \emph{too complicated} (i.e., over-parameterised). Specifically, we suppose that it is a seasonal ARIMA$(2,0,0)(1,0,0)_4$ model. The PPL for this case can be seen in Figure \ref{fig:mis} (b). Both DJ and PM incur a loss in profit, as before. Now, however, the loss decreases with the increase of the sample size. Indeed, closer inspection of the regression output revealed that, in both DJ and PM, the estimated value of the redundant model parameter tended to zero as the sample size increased. This can be explained by a well-known statistical phenomenon of redundant variables: they tend to lead to less efficient estimates of parameters but do not usually lead to systematic bias (as omitted variables typically do).
 
-Besides, the service level for these two situations are presented in Figure \ref{fig:mis_sl}. The trend is similar to the one in Figure \ref{fig:sl0.3}.
+The service levels for these two situations are presented in Figure \ref{fig:mis_sl}. The trend is similar to the one in Figure \ref{fig:sl0.3}.
 
-Finally, we explore the effect on DJ and PM when the distribution of \emph{error term} is misspecified. In particular, we generate data using a modified version of our seasonal ARIMA$(1,0,0)(1,0,0)_4$ model, in which the error term follows a Laplace distribution with mean 0 and standard deviation 200. We remark that the Laplace distribution has ``fat tails", or, more formally, a higher kurtosis than the normal distribution. When estimating the optimal order quantity, however, we use the incorrect assumption that the error term follows a normal distribution.
+Next, we explore the effect on DJ and PM when the distribution of \emph{error term} is misspecified. In particular, we generate data using a modified version of our seasonal ARIMA$(1,0,0)(1,0,0)_4$ model, in which the error term follows a Laplace distribution with mean 0 and scale 141. We remark that the Laplace distribution has ``fat tails", or, more formally, a higher kurtosis than the normal distribution. When estimating the optimal order quantity, however, we use the incorrect assumption that the error term follows a normal distribution.
 
 The results for this scenario are presented in Figure \ref{fig:err}.
 By comparing Figure \ref{fig:err}(a) with Figure \ref{fig:ppl0.3}, we see that the incorrect model of the noise leads only to a very small loss in profit for all the assessed methods. When we compare Figure \ref{fig:err}(b) with Figure \ref{fig:sl0.3}, the picture is rather different. As before, PM rapidly converges to the target service level (0.3) from above, while DJ achieves a lower than needed service level, and this drawback is not remedied by an increase in the sample size. A possible explanation is that our integrated approach works directly with the data, and is therefore, in a sense, ``non-parametric". This makes it more robust than the disjoint approach to deviations from normality.
@@ -447,16 +450,15 @@ By comparing Figure \ref{fig:err}(a) with Figure \ref{fig:ppl0.3}, we see that t
 
 \section{Concluding Remarks} \label{se:end}
 
-Newsvendor problem (NVP) is one of the most popular stochastic optimisation problems. It has different forms and can be typically solved either using a disjoint or integrated approaches. In this paper, we present the framework of a new integrated approach to NVP. The method is flexible, and doesn't make assumptions about the demand distribution, reducing the gap between the demand and the orders.%It could generate stable outcomes even in the case we possess misleading information or make wrong assumptions.
-It is easy to understand and can be applied to wide variety of forecasting models.
+The Newsvendor Problem (NVP) is one of the most popular kinds of stochastic optimisation problems. It has many different forms, all of which are typically solved using a disjoint approach. In this paper, we presented a new, integrated approach to NVP. The approach is flexible, fairly easy to understand, and doesn't make assumptions about the demand distribution.
 
-We show analytically that the proposed approach is equivalent to quantile regression in simple linear cases of NVP, which makes the estimates of parameters of models in this case consistent, efficient and asymptotically follow normal distribution.
+We showed analytically that the proposed approach is equivalent to quantile regression in the simplest (linear) case.  which makes the estimates of parameters of models in this case consistent, efficient and asymptotically follow normal distribution.
 
 We then compare the performance of the proposed method with conventional disjoint method and quantile regression in several simulation experiments, considering the situations, when the demand forecasting model is correctly specified and when it is wrong. We find that in the former case the proposed method performs similar to the quantile regression and to the disjoint method in classic NVP in terms of the percentage profit loss, service level and fill rate. When considering the latter case, the proposed method performs in generally robustly, outperforming the disjoint method in some cases of model misspecification in terms of service level, and performing similar in terms of other error measures.
 
-Furthermore, we have tested the methods in the case of nonlinear NVP, and found that the proposed method performs at least as good as the disjoint one in terms of percentage profit loss. However, it achieved the service level closer to the target one even on small samples, something that the disjoint method was not capable of doing in the same situation.
+Furthermore, we have tested the methods in the case of NNV, and found that the proposed method performs at least as well as the disjoint one in terms of percentage profit loss. However, it achieved the service level closer to the target one even on small samples, something that the disjoint method was not capable of doing in the same situation.
 
-While this paper focused on a specific ARIMA model, we expect that the results could be generalised to such models as regression and ETS. However, we have not yet considered the cases, when the model family is incorrect, which could be considered as a direction for the future work. Another potential direction of future research is multi-product NVP, together with potential substitution effects between the products.
+While we focused on a specific ARIMA model in our experiments, we expect that the results could be generalised to such models as regression and ETS. However, we have not yet considered the cases, when the model family is incorrect, which could be considered as a direction for the future work. Another potential direction of future research is multi-product NVP, either with or without substitution effects between the products.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \printbibliography
